tg-5663. [FE] Mejoras gráficas para apegarse al diseño en figma

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.scss
@@ -5,3 +5,16 @@
 .close {
 	opacity: 0.54;
 }
+
+.bold {
+	font-weight: 500;
+}
+
+.normal-weight {
+	font-weight: 400;
+}
+
+#warning-icon {
+	font-size: 50px;
+	display: block;
+}
