--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/dialogs/scan-patient/scan-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/dialogs/scan-patient/scan-patient.component.html
@@ -16,7 +16,8 @@
 	</div>
 	<form [formGroup]="formScanPatient" fxLayout="row" fxLayoutAlign="center" autocomplete="off">
 		<mat-form-field appearance="outline" fxFlex="83%">
-			<input matInput name="information" formControlName="informationPatient" (change)="captureInformation($event)">
+			<input matInput name="information" formControlName="informationPatient"
+				(change)="captureInformation($event)">
 		</mat-form-field>
 	</form>
 	<button class="close" type="button" mat-icon-button matSuffix (click)="closeDialog()" fxLayout="column">
