tg-5804 [P1] No se muestra la Contrarreferencia si el usuario tiene rol medio y rol enfermero

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -13,7 +13,7 @@
 							[matMenuTriggerFor]="menu">
 							{{ 'ambulatoria.paciente.card.buttons.NUEVA_CONSULTA' | translate | uppercase }}</button>
 						<mat-menu #menu="matMenu">
-							<button mat-menu-item (click)="openNuevaConsulta()">Ambulatoria</button>
+							<button mat-menu-item (click)="hasReferenceNotification()">Ambulatoria</button>
 							<button mat-menu-item (click)="openNuevaConsultaEnfermeria()">Enfermeria</button>
 						</mat-menu>
 					</ng-container>
