--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
@@ -77,7 +77,7 @@
     }
 }
 
-.dose {
+.reference-counterref-title {
 	border-radius: 6px;
     padding: 4px 17px;
     font-weight: 700;
@@ -92,7 +92,6 @@
     color: #EB5757;
 }
 
-
 .span-clickable {    
 	font-size: 15px;
 	font-weight: 500;
@@ -101,5 +100,19 @@
 
 .reference-description {
     margin-top: 20px;
+}
+
+.counterreference-request {
+    background-color: #b0d2f0;
+    color: #1A73E8;
+}
+
+.counterreference-title {
+    margin-top: 10px;
+}
+
+.counterreference-description {
+    line-height: 19px;
+    margin-left: 40px;
 }
 
