tg-5850 Alinea botón con título de card

--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/location-badge/location-badge.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/location-badge/location-badge.component.scss
@@ -1,5 +1,5 @@
 .institution-info {
-	background-color: #F6FAFB;
+	background-color: #E0EEF7;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
