tg-5806 [FE] Agrega a la consulta odontológica la posibilidad de agregar referencias.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -450,6 +450,15 @@
 			</app-document-section>
 		</div>
 
+		<div id="reference_request" class="reference" fxLayout="column" fxLayoutGap="10px">
+			<h2>Solicitud de referencia</h2>
+			<span class="primary" (click)="odontologyReferenceService.openReferenceDialog()">+ Agregar solicitud</span>
+			<app-document-section-table data-display
+											[columns]="odontologyReferenceService.getColumns()"
+											[data]="odontologyReferenceService.getData()">
+			</app-document-section-table>
+		</div>
+
 
 	</div>
 
