tg-5034 Se modifico la vista de un mensaje en Suspender Medicacion

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/suspender-medicacion/suspender-medicacion.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/suspender-medicacion/suspender-medicacion.component.html
@@ -66,10 +66,8 @@
                     formControlName="dayQuantity"
                     placeholder="{{'ambulatoria.paciente.ordenes_prescripciones.suspend_medication_dialog.INPUT_DAY_QUANTITY' | translate }}"
                     type="number"
+				   matTooltip="{{'ambulatoria.paciente.ordenes_prescripciones.suspend_medication_dialog.INPUT_DAY_QUANTITY_HINT' | translate }}"
                     matInput>
-            <mat-hint>
-                <span translate="ambulatoria.paciente.ordenes_prescripciones.suspend_medication_dialog.INPUT_DAY_QUANTITY_HINT"></span>
-            </mat-hint>
             <mat-error *ngIf="hasError(suspendMedicationForm, 'required', 'dayQuantity')">
                 <span translate="ambulatoria.paciente.ordenes_prescripciones.suspend_medication_dialog.INPUT_DAY_QUANTITY_REQUIRED"></span>
             </mat-error>
