--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
@@ -4,7 +4,7 @@
 	<div id="actions" *appHasRole="['ESPECIALISTA_EN_ODONTOLOGIA']" fxLayout="row" fxLayoutGap="15px"
 		fxLayoutAlign="end">
 		<button mat-stroked-button color="primary" class="uppercase" (click)="clearOdontogram()">Restablecer</button>
-		<button mat-raised-button color="primary" class="uppercase" (click)="openConsultationPopup()">Completar
+		<button mat-raised-button color="primary" class="uppercase" (click)="hasReferenceNotification()">Completar
 			consulta</button>
 	</div>
 
