tg-5752 [FE] Ocultar Login de hospitales cuando está activo el de Keycloak

--- a/front-end/apps/projects/hospital/src/app/modules/auth/routes/login/login.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/routes/login/login.component.html
@@ -1,7 +1,9 @@
 <app-content width="narrow">
 
-	<app-hospital-login></app-hospital-login>
+	<app-external-oauth-login *ngIf="isOAuthEnabled else hospitalLogin"></app-external-oauth-login>
 
-	<app-external-oauth-login></app-external-oauth-login>
+	<ng-template #hospitalLogin>
+		<app-hospital-login></app-hospital-login>
+	</ng-template>
 
 </app-content>
