tg-5891 [FE] Corregir estilos en componentes de login

--- a/front-end/apps/projects/hospital/src/app/modules/auth/routes/hospital-login/hospital-login.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/routes/hospital-login/hospital-login.component.html
@@ -1,4 +1,4 @@
-
+<app-content>
 	<form [formGroup]="form" (ngSubmit)="submit()">
 		<mat-card>
 			<mat-card-header fxLayoutAlign="center center" style="padding: 15px;">
@@ -56,3 +56,4 @@
 			</mat-card-actions>
 		</mat-card>
 	</form>
+</app-content>
