tg-5887 [MEJORA]  Botón "Editar Profesiones" debe verse como botón  "Editar Roles"

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -156,7 +156,7 @@
 								</ng-container>
 							</div>
 							<div content>
-								<button id="button-edit-professions" mat-raised-button class="edit-professions" (click)="editProfessions()">
+								<button id="button-edit-professions" mat-stroked-button color="primary" (click)="editProfessions()">
 									<span [translate]="'pacientes.user_data.buttons.EDIT_PROFESSIONS'"
 										class="uppercase"></span>
 								</button>
