tg-5898 [FE] Agrega interfaz para que se visualice "Referencia solicitada" en el card de problemas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -34,6 +34,12 @@
 										<span mat-line class="capitalize-first-letter">
 											{{ problem.snomed.pt }}
 										</span>
+										<div *ngIf="problem.hasPendingReference">
+											<ng-container>
+												<strong class="reference-subtitle reference-request uppercase"
+													[translate]="'ambulatoria.paciente.problemas.PENDING_REFERENCE'"></strong>
+											</ng-container>
+										</div>
 									</div>
 									<div fxFlex="25%">
 										{{getSeverityTypeDisplayByCode(problem.severity)}}
@@ -89,6 +95,12 @@
 										<span mat-line class="capitalize-first-letter">
 											{{ problem.snomed.pt}}
 										</span>
+										<div *ngIf="problem.hasPendingReference">
+											<ng-container>
+												<strong class="reference-subtitle reference-request uppercase"
+												[translate]="'ambulatoria.paciente.problemas.PENDING_REFERENCE'"></strong>
+											</ng-container>
+										</div>
 									</div>
 									<div fxFlex="25%">
 										{{getSeverityTypeDisplayByCode(problem.severity)}}
