--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
@@ -102,6 +102,14 @@
     margin-top: 20px;
 }
 
+.reference-subtitle {
+	border-radius: 6px;
+    padding: 4px 17px;
+    font-weight: 700;
+    font-size: 11px;
+    text-align:center;
+}
+
 .counterreference-request {
     background-color: #b0d2f0;
     color: #1A73E8;
