--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference/reference.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/reference/reference.component.html
@@ -17,8 +17,8 @@
                                 (+{{associatedProblemsControls.value.length - 1}} {{'más'}})
                                 </span>
                             </mat-select-trigger>
-                            <mat-option *ngFor="let problem of problemsList$ | async" [value]="problem.snomed.pt">
-                                {{problem.snomed.pt | translate}}
+                            <mat-option *ngFor="let problem of problemsList$ | async" [value]="problem.hcePersonalHistoryDto.snomed.pt">
+                                {{problem.hcePersonalHistoryDto.snomed.pt | translate}}
                             </mat-option>
                         </mat-select>
                         <mat-error [translate]="'forms.REQUIRED'"></mat-error>
